
[package]
name = "pyramid_app"
version = "0.1.0"
authors = ["Fredrik Noren <fredrik.jw.noren@gmail.com>"]

[dependencies.pyramid]
path = "../pyramid"

[dependencies.pyramid_animation]
path = "../pyramid_animation"

[dependencies.pyramid_viewport]
path = "../pyramid_viewport"

[dependencies.pyramid_template]
path = "../pyramid_template"
